--- a/CSS/padraoPagina.css
+++ b/CSS/padraoPagina.css
@@ -173,4 +173,23 @@ input[type=time] {
       display: flex;
       margin: 0 auto;
       width: 750px;
+      justify-content: space-between;
+  }
+
+  .DivTempos{
+   
+        display: flex;
+        margin: 0 auto;
+        width: 750px;
+        flex-wrap: wrap;
+        justify-content: center;
+    
+  }
+  .calcButton{ 
+      margin-top: 5px;
+      width: 100%;
+      height: 100px;
+      background-color: #cae4f8;
+      font-size: 24px;
+      
   }
