--- a/CSS/padraoPagina.css
+++ b/CSS/padraoPagina.css
@@ -1,27 +1,26 @@
+
+@font-face {
+    font-family: zh-cn;
+    src: url(../Fonts/zh-cn.ttf);
+}
+
 * {
     padding: 0;
     margin: 0;
+    font-family: "zh-cn";
 }
 
+
 body {
-    background: url('../imgs/Genshin-Impact-003.jpg') center center no-repeat fixed;
+    background: url('../imgs/Genshin-Impact-the-chasm-purify-the-large-crystal-.jpg') center center no-repeat fixed;
 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+ 
 }
 
-.cabecalho {
-
-    width: 100%;
-    /*Largura*/
-    height: 75px;
-    /*Altura*/
-    background-color: #000000ab;
-
-
-}
 
 .LogoImg {
 
@@ -31,17 +30,12 @@ body {
 
 
 
-.lado1 {
-    display: flex;
-    max-width: 720px;
+
+.Picks .time1{
     margin: 0 auto;
 }
 
-.lado2 {
-    display: flex;
-    max-width: 720px;
-    margin: 0 auto;
-}
+
 
 .SelecCharBox {
 
@@ -53,6 +47,7 @@ body {
     width: 150px;
     background-color: #ffffff94;
     margin: 5px;
+    height: 80px;
 
 
 
@@ -78,6 +73,18 @@ body {
     border-radius: 10px;
 
 }
+h1{
+    font-size: 50px;
+    text-shadow: 2px 2px 0 #fff,
+     2px -2px 0 #fff,
+      -2px 2px 0 #fff,
+       -2px -2px 0 #fff,
+        2px 0px 0 #fff,
+         0px 2px 0 #fff,
+          -2px 0px 0 #fff, 
+          0px -2px 0 #fff,
+           13px 15px 6px #ffffff00;
+}
 
 .Picks {
     align-items: center;
@@ -85,13 +92,22 @@ body {
 }
 
 .inputNameTeam {
-    width: 80%;
+    width: 100%;
     height: 70px;
-    font-size: 80px;
+    font-size: 30px;
     text-align: center;
     border: none;
-    border-bottom: 2px solid black;
+  
     background: transparent;
+    text-shadow: 2px 2px 0 #fff,
+     2px -2px 0 #fff,
+      -2px 2px 0 #fff,
+       -2px -2px 0 #fff,
+        2px 0px 0 #fff,
+         0px 2px 0 #fff,
+          -2px 0px 0 #fff, 
+          0px -2px 0 #fff,
+           13px 15px 6px #ffffff00;
 }
 
 .BansTitle {
@@ -126,7 +142,7 @@ a {
 
 
 .LinkCanal {
-    font-size: 25px;
+    font-size: 20px;
     text-shadow: 2px 2px 0 #031020, 2px -2px 0 #031020, -2px 2px 0 #031020, -2px -2px 0 #031020, 2px 0px 0 #031020, 0px 2px 0 #031020, -2px 0px 0 #031020, 0px -2px 0 #031020;
     border-radius: 0 25px 25px 0;
     border: 3px solid #031020;
@@ -170,9 +186,10 @@ input[type=time] {
   }
 
   .tabelasTempos{
+      font-size: 24px;
       display: flex;
       margin: 0 auto;
-      width: 750px;
+      width: 100%;
       justify-content: space-between;
   }
 
@@ -180,7 +197,7 @@ input[type=time] {
    
         display: flex;
         margin: 0 auto;
-        width: 750px;
+        width: 1080px;
         flex-wrap: wrap;
         justify-content: center;
     
@@ -191,5 +208,116 @@ input[type=time] {
       height: 100px;
       background-color: #cae4f8;
       font-size: 24px;
-      
   }
+
+
+
+  .angry-grid {
+    width: 1080px;
+    margin: 0 auto;
+    display: grid; 
+ 
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 350px 350px 350px;
+    
+    gap: 10px;
+    justify-items: center;
+    
+    
+ }
+   
+ #item-0 {
+     text-align: center;
+    width: 350px;
+ 
+    grid-row-start: 1;
+    grid-column-start: 1;
+ 
+    grid-row-end: 2;
+    grid-column-end: 2;
+    
+ }
+ #item-1 {
+    text-align: center;
+    width: 350px;
+
+    grid-row-start: 2;
+    grid-column-start: 1;
+ 
+    grid-row-end: 3;
+    grid-column-end: 2;
+    
+ }
+ #item-2 {
+    text-align: center;
+    width: 350px;
+ 
+    grid-row-start: 1;
+    grid-column-start: 2;
+ 
+    grid-row-end: 2;
+    grid-column-end: 3;
+    
+ }
+ #item-3 {
+    text-align: center;
+    width: 350px;
+
+    grid-row-start: 2;
+    grid-column-start: 2;
+ 
+    grid-row-end: 3;
+    grid-column-end: 3;
+    
+ }
+ #item-4 {
+    text-align: center;
+    width: 350px;
+    grid-row-start: 1;
+    grid-column-start: 3;
+ 
+    grid-row-end: 2;
+    grid-column-end: 4;
+    
+ }
+ #item-5 {
+    text-align: center;
+    width: 350px;
+
+    grid-row-start: 2;
+    grid-column-start: 3;
+ 
+    grid-row-end: 3;
+    grid-column-end: 4;
+    
+ }
+ .timeUM{
+     display: flex;
+     width: 340px;
+     height: 300px;
+     flex-wrap: wrap;
+ }
+ .timeDois{
+     display: flex;
+     width: 340px;
+     height: 300px;
+     flex-wrap: wrap;
+ }
+ .BanstimeUM{
+     display: flex;
+     width: 340px;
+     height: 300px;
+     flex-wrap: wrap;
+ }
+ .BanstimeUM{
+     display: flex;
+     width: 340px;
+     height: 250px;
+     flex-wrap: wrap;
+ }
+ .forces{
+    display: flex;
+    width: 340px;
+    height: 75px;
+    flex-wrap: wrap;
+ }
