--- a/CSS/padraoPagina.css
+++ b/CSS/padraoPagina.css
@@ -12,7 +12,7 @@
 
 
 body {
-    background: url('../imgs/cap.jpg') center center no-repeat fixed;
+    background: url('../imgs/Sumeru_City.webp') center center no-repeat fixed;
 
     -webkit-background-size: cover;
     -moz-background-size: cover;
